--- a/manifest.json
+++ b/manifest.json
@@ -25,5 +25,11 @@
       "js": ["content.js", "floatingButton.js"],
       "run_at": "document_end"
     }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": [ "assets/*" ],
+      "matches": [ "<all_urls>" ]
+    }
   ]
 }
