--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,9 @@
   "version": "1.0",
   "description": "Analyzes your resume against a job description.",
   "permissions": ["storage", "activeTab", "scripting"],
+  "host_permissions": [
+    "<all_urls>"
+  ],
   "action": {
     "default_popup": "popup.html"
   },
@@ -22,7 +25,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js", "floatingButton.js"],
+      "js": ["content.js"],
       "run_at": "document_end"
     }
   ],
